substrate/primitives/api/test/tests/ui/deprecation_info.stderr
error: Invalid deprecation attribute: missing `note`
               help: the following are the possible correct uses
       |
       |     #[deprecated = "reason"]
       |
       |     #[deprecated(/*opt*/ since = "version", /*opt*/ note = "reason")]
       |
       |     #[deprecated]
       |
  --> tests/ui/deprecation_info.rs:20:3
   |
20 |         #[deprecated(unknown_kw = "test")]
   |         ^

error[E0541]: unknown meta item 'unknown_kw'
  --> tests/ui/deprecation_info.rs:20:16
   |
20 |         #[deprecated(unknown_kw = "test")]
   |                      ^^^^^^^^^^^^^^^^^^^ expected one of `since`, `note`

error[E0565]: literal in `deprecated` value must be a string
  --> tests/ui/deprecation_info.rs:22:24
   |
22 |         #[deprecated(since = 5)]
   |                              ^
